
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct WPSProbeRespIe {int dummy; } ;


 int MAX_TL ;
 int assert (int) ;
 int free (char*) ;
 int printf (char*,int) ;
 long* wtag_c_point ;

int
wtoa( char *pop, struct WPSProbeRespIe *tag )
{
    unsigned char *a = (void *)tag;
    char *tmp;
    long tmp_a;
    int i = 0, p = 0, co = 0, j;
    int size = sizeof(struct WPSProbeRespIe);

    while( p < size )
    {
 if( wtag_c_point[co] == (long)(a+p) ){
     assert(co++ < 7);
     tmp_a = 0;
     for( j = 0; j < 32; j+=8 )
  tmp_a |= *(a+p++)<<j;

     tmp = (char *)tmp_a;
     j = 0;
     while( tmp[j] )
  pop[i++] = tmp[j++];


     p+=4;

     free( tmp );
 }else
     pop[i++] = *(a+p++);
    }





    pop[1] = i-2;
    assert(i <= MAX_TL+1);


    return( i );
}
